#280 feat/get-completed-todo-lists: 투두리스트 완료여부 일괄 수정 기능 추가